--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  font-family: 'font-perfect-dos';
 }
 
 .text-stroke {
